<resources>
    <string name="app_name">Moa\'s Ark Natural NZ</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_view_video">ViewVideo</string>
    <string name="app_icon_description">Moa\'s Ark Application icon</string>
    <string name="blurb">There was a problem connecting to the server. Please refresh the page or try again later.</string>
    <string name="hm_feature_dance_video_aut_text">Feature Dance Video</string>
    <string name="hm_feature_food_video_aut_text">Feature Food Video</string>
    <string name="sharing_title">Sharing</string>
    <string name="Sharing_Error_Text">Error Finding Link</string>
    <string name="package_name">"com.wordpress.onelifegroupnz.moaarknatural"</string>
    <string name="title_activity_video_gallery">Video Gallery</string>
    <string name="title_activity_dance_video_gallery">Dance Gallery</string>
    <string name="title_activity_food_video_gallery">Food Gallery</string>
    <string name="text_video_gallery_desc_generic">Moa\'s Ark</string>
    <string name="text_video_gallery_desc_dance">Moa\'s Ark Dance Exercise Library</string>
    <string name="text_video_gallery_desc_food">Moa\'s Ark Food Library</string>
    <string name="loadBtnName">Load more videos</string>
    <string name="title_activity_search_results">SearchResults</string>
    <string name="search_title">Search</string>
    <string name="menu_refresh">Menu Refresh</string>
    <string name="action_notification">Notifications</string>
    <string name="action_share_video">Share Video</string>
    <string name="search_dialog"></string>
    <string name="msg_no_results">No results found for %s</string>
    <string name="msg_results_found">%1$s results found for %2$s</string>
    <string name="server_connection_error_title">Can not connect</string>
    <string name="server_connection_error">Please check your wifi and try again.</string>
    <string name="DIRECTORY_ROOT">https://shoptradenz.com/moasapp/</string>
    <string name="moa_s_ark_shop">Moa\'s Ark NZ Shop</string>
    <string name="website_shop_url">https://moasarknaturalnz.com/shop/</string>
    <string name="website_contact_form_url">https://moasarknaturalnz.com/contact/</string>
    <string name="stepsheet_not_found">No step sheet could be found for this dance video.</string>
    <string name="recipe_not_found">No receipe could be found for this food video.</string>
    <string name="blogs_title">Blogs from Moa\'s Ark</string>
    <string name="pdf_reload_text_generic">There was an error getting additional data from the server. Try reloading it.</string>
    <string name="pdf_reload_text_stepsheet">There was an error getting stepsheet data from the server. Try reloading it.</string>
    <string name="pdf_reload_text_recipe">There was an error getting recipe data from the server. Try reloading it.</string>
    <string name="previous_video"><![CDATA[< Previous Video]]></string>
    <string name="next_video"><![CDATA[Next Video >]]></string>
    <string name="app_play_store_url">https://play.google.com/store/apps/details?id=com.wordpress.onelifegroupnz.moaarknatural</string>
    <string name="no_pdf_found_generic">No description was found for this video.</string>

    <!-- Search Type spinner suggestions-->
    <string name="search_type_title">Search Type:</string>
    <string name="search_type_all">All</string>
    <string name="search_type_dance">Dance exercise</string>
    <string name="search_type_food">Food</string>

    <!-- This is the advertisement ids for adMob please use the testing one for clicking (Do not click the real ad) -->
    <!-- AdMob Test ID (Enable for testing builds) -->
    <!-- <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string> -->
    <!-- AdMob Live ID (Enable for release builds) -->
    <string name="banner_ad_unit_id">ca-app-pub-2838047532476449/3742836256</string>

    <!-- BGP sign up and contact form strings -->
    <string name="title_activity_sign_up">DIY Living Wills and Trusts</string>
    <string name="sign_up_page_title">Beneficial Group Purchase</string>
    <string name="participation_agreement_in_bgp_one_life_trust">Will for Living Trust</string>
    <string name="notice_of_application_for_bgp_shares">Plain English Living Trust</string>
    <string name="sales_email">sales@moasarknaturalnz.com</string>
    <string name="sales_email_desc">If you require further assistance with these forms or have any suggestions or comments you would like to share, you can contact us at the following email address:</string>
    <string name="bgp_sign_up_desc">You can view and download the following forms from here.</string>
    <string name="copy_text_desc">Copy to clipboard</string>
    <string name="title_activity_contact_form">Contact Form</string>
    <string name="contact_form_title">Contact Moa\'s Ark Natural</string>
    <string name="contact_form_desc">If you have any questions or concerns please use this contact form. Emails are sent using an external email client.</string>
    <string name="name_field_hint">Name</string>
    <string name="subject_field_hint">Subject</string>
    <string name="message_field_hint">Message</string>
    <string name="submit_btn_text">Submit</string>
    <string name="title_activity_one_coin_register">BGP Share Package Account Registration</string>
    <string name="bgp_form_details"></string>
    <string name="form_logo">Moas Ark logo</string>
    <string name="form_desc">In order to register your BGP Share package, we will need the following information completed:</string>
    <string name="hint_email_address">Email Address</string>
    <string name="hint_confirm_email_address">Confirm Email Address</string>
    <string name="hint_first_name">First Name(s)</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_user_name">Preferred Online User Name</string>
    <string name="hint_country_of_residence">Country of Residence:</string>
    <string name="hint_city_of_residence">City of Residence</string>
    <string name="hint_postcode">Postcode</string>
    <string name="hint_mobile_phone">Mobile Phone</string>
    <string name="hint_home_phone">Home Phone</string>
    <string name="available_forms_desc">For further information and online registration details click the button below.</string>
    <string name="bgp_account_form_title">ONLINE ACCOUNT</string>
    <string name="text_country">(Select a Country)</string>
    <string name="email_warning_message">NOTE: A EMAIL CLIENT IS REQUIRED TO SEND THIS FORM!</string>
    <string name="email_info">(You need to have access to change Passwords etc)</string>
    <string name="name_info">(Must be the same as the Legal name on your Passport)</string>
    <string name="username_info">(Cannot be changed later)</string>
    <string name="phone_number_info">Phone number - Only one is required.</string>
    <string name="splash_message">Starting</string>

    <!--PDF urls-->
    <string name="bgp_agreement_url">https://shoptradenz.com/moasapp/forms/Will-for-Living-Trust.pdf</string>
    <string name="BGP_Shares_url">https://shoptradenz.com/moasapp/forms/Plain-English-Living-Trust.pdf</string>


    <!--BGP Register URL-->
    <string name="website_bgp_register_url">https://moasarknaturalnz.com/bgp/</string>
    <string name="reload_pdf_button">Reload PDF button</string>

    <!-- Google Cast -->
    <!-- Sample app test Google Cast ID -->
    <!-- <string name="cast_app_id">4F8B3483</string> -->
    <!-- Release app Google Cast ID -->
    <string name="cast_app_id">F884B90F</string>
    <string name="media_route_menu_title">Play on&#8230;</string>
    <string name="play_services_error_title">Can\'t find Google Play Services</string>
    <string name="play_services_error_message">Could not find Google Play Services or Google Play Services is not installed. Please install the latest version of Google Play Services and try again. Some features of the app may not be available.</string>
    <string name="play_services_error_toast">Google Play Services is not installed. Some features of the app may not be available.</string>


    <string name="button_download_media">Download media</string>
    <string name="share_menu_text_generic">Share…</string>
    <string name="download_menu_title">Download…</string>

    <!-- Rate this app -->
    <string name="rate_dialog_title">Rate this app</string>
    <string name="rate_dialog_message">If you enjoy playing this app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thanks for your support!</string>
    <string name="rate_dialog_ok">Rate It Now</string>
    <string name="rate_dialog_cancel">Remind Me Later</string>
    <string name="rate_dialog_no">No, Thanks</string>
    <string name="share_text">Share text</string>
    <string name="share_video_btn">Share Video</string>
    <string name="share_music_btn">Share Music</string>
    <string name="download_video_btn">Download Video</string>
    <string name="download_music_btn">Download Music</string>
    <string name="share_submit_btn">Share</string>
    <string name="title_activity_playlist_gallery">PlaylistGallery</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="load_more">Load More</string>
    <string name="playlist_title">Playlist</string>
    <string name="music_preview_text">MUSIC PREVIEW</string>
</resources>
