<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wordpress.onelifegroupnz.moaarknatural.OneCoinRegister"
    tools:showIn="@layout/activity_one_coin_register"
    android:background="@color/colorBody">

    <ScrollView
        android:id="@+id/ScrollViewHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/homeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_with_bannerad_paddingBottom"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:weightSum="1">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="2dp">

                <TextView
                    android:id="@+id/warningEmailMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorBody"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/email_warning_message" />
            </LinearLayout>

            <ImageView
                android:id="@+id/onelifelogo"
                android:layout_width="match_parent"
                android:layout_height="100sp"
                android:layout_gravity="center"
                android:contentDescription="@string/one_life_logo"
                app:srcCompat="@drawable/onelifelogo" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/one_coin_account_form_title"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/oneCoinFormDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/one_life_form_desc" />

            <EditText
                android:id="@+id/emailField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_email_address" />

            <TextView
                android:id="@+id/emailInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_info" />

            <EditText
                android:id="@+id/fnameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/hint_first_name" />

            <EditText
                android:id="@+id/lnameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/hint_last_name" />

            <TextView
                android:id="@+id/nameInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_info" />

            <EditText
                android:id="@+id/usernameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/hint_user_name" />

            <TextView
                android:id="@+id/usernameInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username_info" />

            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:flexWrap="wrap"
                android:orientation="horizontal"
                android:paddingLeft="4sp"
                android:paddingRight="4sp">

                <TextView
                    android:id="@+id/countryDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_country_of_residence"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/countrySpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </com.google.android.flexbox.FlexboxLayout>

            <EditText
                android:id="@+id/cityField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName|textNoSuggestions"
                android:hint="@string/hint_city_of_residence" />

            <EditText
                android:id="@+id/postCodeField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text|textNoSuggestions"
                android:hint="@string/hint_postcode" />

            <TextView
                android:id="@+id/phoneNumberInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_number_info" />

            <EditText
                android:id="@+id/mobNumField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone"
                android:hint="@string/hint_mobile_phone" />

            <EditText
                android:id="@+id/homNumField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone"
                android:hint="@string/hint_home_phone" />

            <TextView
                android:id="@+id/oneCointFormDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/crypto_form_details" />

            <Button
                android:id="@+id/submitBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="btnOnClick"
                android:text="@string/submit_btn_text" />

        </LinearLayout>
    </ScrollView>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id_live" />

</RelativeLayout>
