<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fitsSystemWindows="true"
tools:context="com.wordpress.onelifegroupnz.moaarknatural.SplashScreen"
android:background="@color/colorBody"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:id="@+id/txtSplashTitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="25dp"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_weight="0.15"
        android:gravity="center"
        android:text="@string/app_name"
        android:textStyle="bold"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform" />

    <ImageView
        android:id="@+id/imgSplash"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/app_icon_description"
        android:src="@drawable/moasarklogo_notext_hd"
        android:layout_weight="0.6"/>

    <ProgressBar
        android:id="@+id/progressBar1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:indeterminateDrawable="@drawable/gradient_progress_circular"
        android:layout_weight="0.2"/>

    <TextView
        android:id="@+id/txtLoading"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="10dp"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="25dp"
        android:layout_weight="0.05"
        android:gravity="center"
        android:text="@string/splash_message"
        android:textStyle="bold"
        app:autoSizeMaxTextSize="64sp"
        app:autoSizeMinTextSize="8sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform" />

</LinearLayout>
